--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <img src="landingpage.png" alt="Description of image">
         </div>
         <ul class="sci">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.facebook.com/sheghu.rahmathullah/"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://github.com/sheghurahmathullah"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/sheghu-rahmathullah-b60846255/"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
     </section>
     
@@ -535,8 +535,8 @@
     <footer class="footer">
         <div class="container">
           <p class="footer-message">"Creativity is intelligence having fun." - Albert Einstein</p>
-          <p class="footer-note">Thank you for visiting! Feel free to connect with me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a> or <a href="https://www.github.com" target="_blank">GitHub</a>.</p>
-          <p class="footer-credits">&copy; 2024 Segu | Designed with passion and precision.</p>
+          <p class="footer-note">Thank you for visiting! Feel free to connect with me on <a href="https://www.linkedin.com/in/sheghu-rahmathullah-b60846255/" target="_blank">LinkedIn</a> or <a href="https://github.com/sheghurahmathullah" target="_blank">GitHub</a>.</p>
+          <p class="footer-credits">&copy; 2024 Sheghu Rahmathullah A | Designed with passion and precision.</p>
         </div>
       </footer>
       
@@ -657,11 +657,6 @@ document.querySelectorAll(".unique-option").forEach(option => {
       this.classList.add("active");
    });
 });
-
-
-/* projects */
-
-
 
 
         function initialize() {
